--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ normal distribution of letters, as opposed to using 'Content
 				<div class="apartment-left">
 				<div class="apartment-1st">
 					<div class="bina_07">
-					   <img src="img/bina_07.png" alt="bina07">
+					   <img src="img/bina.png" alt="bina07">
 					</div>
 					<div class="flat-box">
 						<p class="flat-name">Apartment 37</p>
@@ -336,7 +336,7 @@ normal distribution of letters, as opposed to using 'Content
 				</div>
 				<div class="apartment-2nd">
 					<div class="bina_07">
-					   <img src="img/bina_07.png" alt="bina07">
+					   <img src="img/bina.png" alt="bina07">
 					</div>
 					<div class="flat-box-active">
 						<p class="flat-name-active">Apartment 37</p>
@@ -393,7 +393,7 @@ normal distribution of letters, as opposed to using 'Content
 	<div>
 		
 
-		
+
 	<div class="infrastructure" >
 		<div class="container3">
 			<h4 class="infrastructure-title">Infrastructure</h4>
