--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ text in the box (12 px. Regular)
                              		
                              	</div>
                              	<div class="Price-m2">
-	                             	<p>Price Range Per m2</p>
+	                             	<p class="Price-m2-p">Price Range Per m2</p>
 	                             	<div id="anchor"></div>
 	                            </div>
 	                            <div>
@@ -452,14 +452,6 @@ text in the box (12 px. Regular)
 				</div>
 			</div>
 		</div>
-
-
-
-
-
-
-
-
 
 
 
